# xarray-custom

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: modules.doctree  xarray_custom.doctree
.github/workflows/: publish.yml  pypi.yml  test.yml
_apidoc/: modules.html  xarray_custom.html
_modules/: index.html  typing.html
_modules/xarray_custom/: accessor.html  bases.html  dataclasses.html  docstring.html  special.html  utils.html
_sources/: index.rst.txt
_sources/_apidoc/: modules.rst.txt  xarray_custom.rst.txt
docs/: conf.py  index.rst
etc/: builddocs  configure
tests/: test_dataclasses.py  test_package.py  test_version.py
xarray_custom/: __init__.py  abc.py  accessor.py  bases.py  dataclasses.py  docstring.py  ensuring.py  special.py  typing.py  utils.py
