[tool.poetry]
name = "xarray-custom"
version = "0.1.0"
description = "Data classes for custom xarray constructors"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/xarray-custom"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18"
xarray = "^0.15"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7"
jupyter = "^1.0"
jupyterlab = "^2.0"
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
