[tool.poetry]
name = "xarray-custom"
version = "0.6.0"
description = "Data classes for custom xarray creation"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/xarray-custom"
documentation = "https://astropenguin.github.io/xarray-custom"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18"
xarray = "^0.15"
toml = "^0.10"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8"
ipython = "^7.15"
jupyterlab = "^2.2"
pytest = "^6.0"
sphinx = "^3.1"
pydata-sphinx-theme = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
